--- a/src/Util/Localization/LocalizationTable.csv
+++ b/src/Util/Localization/LocalizationTable.csv
@@ -13,8 +13,8 @@ Settings.EnabledSelectionBox,Enable SelectionBox when hovered,
 Settings.EnabledSelectionBoxDesc,Allow a SelectionBox overlay when the mouse is hovering over a part.,
 Settings.IgnoreLockedParts,Ignore locked parts,
 Settings.IgnoreLockedPartsDesc,Parts with their Locked property set to true will not be converted.,
-Toggle.Enabled,Enabled,
-Toggle.Disabled,Disabled,
+Toggle.Enabled,Enabled,已启用
+Toggle.Disabled,Disabled,已禁用
 Notice.Outdated,{1} is now available to download!,
 Notice.IgnoreLockedPart,Ignoring locked part due to settings.,
 Notice.ShapeNotSupported,Part shape is not supported.,
