--- a/src/Util/Localization/LocalizationTable.csv
+++ b/src/Util/Localization/LocalizationTable.csv
@@ -1,44 +1,44 @@
-Key,en-us,zh-cn
-Plugin.Name,Part to Terrain,
-Plugin.NameDev,Part to Terrain [DEV],
-Plugin.Desc,Convert parts into terrain with ease.,
-Plugin.NameVersion,Part to Terrain {1},
-Button.Materials,Materials,物料
-Button.Settings,Settings,设置
-Settings.CheckUpdates,Check for updates,检查更新
-Settings.CheckUpdatesDesc,Check for updates on Studio launch and display a notice when the plugin is outdated.,
-Settings.DeletePart,Delete part when converted,
-Settings.DeletePartDesc,Deletes the part after being converted to Terrain.,
-Settings.EnabledSelectionBox,Enable SelectionBox when hovered,
-Settings.EnabledSelectionBoxDesc,Allow a SelectionBox overlay when the mouse is hovering over a part.,
-Settings.IgnoreLockedParts,Ignore locked parts,
-Settings.IgnoreLockedPartsDesc,Parts with their Locked property set to true will not be converted.,
-Toggle.Enabled,Enabled,已启用
-Toggle.Disabled,Disabled,已禁用
-Notice.Outdated,{1} is now available to download!,
-Notice.IgnoreLockedPart,Ignoring locked part due to settings.,
-Notice.ShapeNotSupported,Part shape is not supported.,
-Notice.ClassNotSupport,Part class is not supported.,
-Materials.Air,Air,空气
-Materials.Asphalt,Asphalt,沥青
-Materials.Basalt,Basalt,玄武岩
-Materials.Brick,Brick,砖块
-Materials.Cobblestone,Cobblestone,鹅卵石
-Materials.Concrete,Concrete,水泥
-Materials.CrackedLava,Cracked Lava,裂纹熔岩
-Materials.Glacier,Glacier,冰川
-Materials.Grass,Grass,草地
-Materials.Ground,Ground,土地
-Materials.Ice,Ice,冰
-Materials.LeafyGrass,Leafy Grass,绿叶草
-Materials.Limestone,Limestone,石灰石
-Materials.Mud,Mud,泥
-Materials.Pavement,Pavement,路面
-Materials.Rock,Rock,岩石
-Materials.Salt,Salt,盐
-Materials.Sand,Sand,沙
-Materials.Sandstone,Sandstone,砂岩
-Materials.Slate,Slate,石板
-Materials.Snow,Snow,雪
-Materials.Water,Water,水域
-Materials.WoodPlanks,Wood Planks,木板
+Key,en-us,zh-cn,ko_KR
+Plugin.Name,Part to Terrain,,
+Plugin.NameDev,Part to Terrain [DEV],,
+Plugin.Desc,Convert parts into terrain with ease.,,
+Plugin.NameVersion,Part to Terrain {1},,
+Button.Materials,Materials,物料,기재
+Button.Settings,Settings,设置,설정
+Settings.CheckUpdates,Check for updates,检查更新,
+Settings.CheckUpdatesDesc,Check for updates on Studio launch and display a notice when the plugin is outdated.,,
+Settings.DeletePart,Delete part when converted,,
+Settings.DeletePartDesc,Deletes the part after being converted to Terrain.,,
+Settings.EnabledSelectionBox,Enable SelectionBox when hovered,,
+Settings.EnabledSelectionBoxDesc,Allow a SelectionBox overlay when the mouse is hovering over a part.,,
+Settings.IgnoreLockedParts,Ignore locked parts,,
+Settings.IgnoreLockedPartsDesc,Parts with their Locked property set to true will not be converted.,,
+Toggle.Enabled,Enabled,已启用,
+Toggle.Disabled,Disabled,已禁用,
+Notice.Outdated,{1} is now available to download!,,
+Notice.IgnoreLockedPart,Ignoring locked part due to settings.,,
+Notice.ShapeNotSupported,Part shape is not supported.,,
+Notice.ClassNotSupport,Part class is not supported.,,
+Materials.Air,Air,空气,공기
+Materials.Asphalt,Asphalt,沥青,아스팔트
+Materials.Basalt,Basalt,玄武岩,현무암
+Materials.Brick,Brick,砖块,벽돌
+Materials.Cobblestone,Cobblestone,鹅卵石,자갈
+Materials.Concrete,Concrete,水泥,콘크리트
+Materials.CrackedLava,Cracked Lava,裂纹熔岩,갈라진 용암
+Materials.Glacier,Glacier,冰川,빙하
+Materials.Grass,Grass,草地,잔디
+Materials.Ground,Ground,土地,토양
+Materials.Ice,Ice,冰,얼음
+Materials.LeafyGrass,Leafy Grass,绿叶草,무성한 잔디
+Materials.Limestone,Limestone,石灰石,석회암
+Materials.Mud,Mud,泥,진흙
+Materials.Pavement,Pavement,路面,보도
+Materials.Rock,Rock,岩石,바위
+Materials.Salt,Salt,盐,소금
+Materials.Sand,Sand,沙,모래
+Materials.Sandstone,Sandstone,砂岩,사암
+Materials.Slate,Slate,石板,슬레이트
+Materials.Snow,Snow,雪,눈
+Materials.Water,Water,水域,물
+Materials.WoodPlanks,Wood Planks,木板,나무 판자
