Reworded "EnabledSelectionBox" setting

--- a/src/Util/Localization/LocalizationTable.csv
+++ b/src/Util/Localization/LocalizationTable.csv
@@ -9,8 +9,8 @@ Settings.CheckUpdates,Check for updates,检查更新,
 Settings.CheckUpdatesDesc,Check for updates on Studio launch and display a notice when the plugin is outdated.,,
 Settings.DeletePart,Delete part when converted,,
 Settings.DeletePartDesc,Deletes the part after being converted to Terrain.,,
-Settings.EnabledSelectionBox,Enable SelectionBox when hovered,,
-Settings.EnabledSelectionBoxDesc,Allow a SelectionBox overlay when the mouse is hovering over a part.,,
+Settings.EnabledSelectionBox,Highlight part on hover,,
+Settings.EnabledSelectionBoxDesc,Highlight the part when the mouse is hovers over the part.,,
 Settings.IgnoreLockedParts,Ignore locked parts,,
 Settings.IgnoreLockedPartsDesc,Parts with their Locked property set to true will not be converted.,,
 Toggle.Enabled,Enabled,已启用,
