--- a/src/Util/Localization/LocalizationTable.csv
+++ b/src/Util/Localization/LocalizationTable.csv
@@ -1,8 +1,8 @@
 Key,en-us,zh-cn,ko_KR
-Plugin.Name,Part to Terrain,部件至地形,지형 파트
-Plugin.NameDev,Part to Terrain [DEV],部件至地形 [DEV],지형 파트 [DEV]
+Plugin.Name,Part to Terrain,部件至地形,파트를 지형으로
+Plugin.NameDev,Part to Terrain [DEV],部件至地形 [DEV],파트를 지형으로 [DEV]
 Plugin.Desc,Convert parts into terrain with ease.,,
-Plugin.NameVersion,Part to Terrain {1},部件至地形 {1},지형 파트 {1}
+Plugin.NameVersion,Part to Terrain {1},部件至地形 {1},파트를 지형으로 {1}
 Button.Materials,Materials,物料,기재
 Button.Settings,Settings,设置,설정
 Settings.CheckUpdates,Check for updates,检查更新,
@@ -19,7 +19,7 @@ Notice.Outdated,{1} is now available to download!,,
 Notice.IgnoreLockedPart,Ignoring locked part due to settings.,,
 Notice.ShapeNotSupported,Part shape is not supported.,,
 Notice.ClassNotSupport,Part class is not supported.,,
-Materials.Air,Air,空气,공기
+Materials.Air,Air,天空,공기
 Materials.Asphalt,Asphalt,沥青,아스팔트
 Materials.Basalt,Basalt,玄武岩,현무암
 Materials.Brick,Brick,砖块,벽돌
