--- a/src/Util/Localization/LocalizationTable.csv
+++ b/src/Util/Localization/LocalizationTable.csv
@@ -16,7 +16,7 @@ Settings.IgnoreLockedParts,Ignore locked parts,,
 Settings.IgnoreLockedPartsDesc,Parts with their Locked property set to true will not be converted.,,
 Toggle.Enabled,Enabled,已启用,사용
 Toggle.Disabled,Disabled,已禁用,사용 안 함
-Notice.Outdated,{1} is now available to download!,,
+Notice.Outdated,A new update is available.,,
 Notice.IgnoreLockedPart,Ignoring locked part due to settings.,,
 Notice.ShapeNotSupported,Part shape is not supported.,,
 Notice.ClassNotSupport,Part class is not supported.,,
