Added setting to ignore invisible parts

--- a/src/Util/Localization/LocalizationTable.csv
+++ b/src/Util/Localization/LocalizationTable.csv
@@ -16,6 +16,8 @@ Settings.IgnoreLockedParts,Ignore locked parts,,,,,
 Settings.IgnoreLockedPartsDesc,Parts with their Locked property set to true will not be converted.,,,,,
 Settings.PreserveTerrain,Preserve existing Terrain,,,,,
 Settings.PreserveTerrainDesc,Existing terrain will not be overwritten.<br/><br/>NOTE: Air will delete terrain regardless of setting.,,,,,
+Settings.IgnoreInvisibleParts,Ignore invisible parts,,,,,
+Settings.IgnoreInvisiblePartsDesc,Parts that are invisible will converted and will not be highlighted when hover.,,,,,
 Toggle.Enabled,Enabled,已启用,사용,,,
 Toggle.Disabled,Disabled,已禁用,사용 안 함,,,
 Notice.Outdated,A new update is available.,,,,,
