--- a/src/Util/Localization/LocalizationTable.csv
+++ b/src/Util/Localization/LocalizationTable.csv
@@ -1,50 +1,48 @@
-Key,en_US,zh_CN,ko_KR,ja_JP,es_ES,pt_BR
-Plugin.Name,Part to Terrain,部件至地形,파트를 지형으로,地形のパーツ,Parte en Terreno,Parte para terreno
-Plugin.NameDev,Part to Terrain [DEV],部件至地形 [DEV],파트를 지형으로 [DEV],,,
-Plugin.Desc,Convert parts into terrain with ease.,,,,,
-Plugin.NameVersion,Part to Terrain {1},部件至地形 {1},파트를 지형으로 {1},地形のパーツ {1},Parte en Terreno {1},Parte para terreno {1}
-Plugin.Search,Search...,搜索...,검색...,検索...,Buscar...,Pesquisar...
-Button.Materials,Materials,物料,기재,材料,,
-Button.Settings,Settings,设置,설정,設定,,
-Settings.CheckUpdates,Check for updates,检查更新,,,,
-Settings.CheckUpdatesDesc,Check for updates on Studio launch and display a notice when the plugin is outdated.,,,,,
-Settings.DeletePart,Delete part when converted,,,,,
-Settings.DeletePartDesc,Deletes the part after being converted to Terrain.,,,,,
-Settings.EnabledSelectionBox,Highlight part on hover,,,,,
-Settings.EnabledSelectionBoxDesc,Highlight the part when the mouse is hovers over the part.,,,,,
-Settings.IgnoreLockedParts,Ignore locked parts,,,,,
-Settings.IgnoreLockedPartsDesc,Parts with their Locked property set to true will not be converted.,,,,,
-Settings.PreserveTerrain,Preserve existing Terrain,,,,,
-Settings.PreserveTerrainDesc,Existing terrain will not be overwritten.<br/><br/>NOTE: Air will delete terrain regardless of setting.,,,,,
-Settings.IgnoreInvisibleParts,Ignore invisible parts,,,,,
-Settings.IgnoreInvisiblePartsDesc,Parts that are invisible will converted and will not be highlighted when hover.,,,,,
-Toggle.Enabled,Enabled,已启用,사용,,,
-Toggle.Disabled,Disabled,已禁用,사용 안 함,,,
-Notice.Outdated,A new update is available.,,,,,
-Notice.IgnoreLockedPart,Ignoring locked part due to settings.,,,,,
-Notice.ShapeNotSupported,Part shape is not supported.,,,,,
-Notice.ClassNotSupport,Part class is not supported.,,,,,
-Notice.NoResultsFound,No results found,未找到结果,결과 없음,,,
-Materials.Air,Air,天空,공기,空気,Aire,Ar
-Materials.Asphalt,Asphalt,沥青,아스팔트,アスファルト,Asfalto,Asfalto
-Materials.Basalt,Basalt,玄武岩,현무암,玄武岩,Basalto,Basalto
-Materials.Brick,Brick,砖块,벽돌,レンガ,Ladrillo,Ladrillo
-Materials.Cobblestone,Cobblestone,鹅卵石,자갈,玉砂利,Adoquín,Paralelepípedo
-Materials.Concrete,Concrete,水泥,콘크리트,コンクリート,Concreto,Concreto
-Materials.CrackedLava,Cracked Lava,裂纹熔岩,갈라진 용암,ひび割れた溶岩,Lava agrietada,Lava rachada
-Materials.Glacier,Glacier,冰川,빙하,氷河,Glaciar,Geleira
-Materials.Grass,Grass,草地,잔디,草,Hierba,Grama
-Materials.Ground,Ground,土地,토양,地面,Tierra,Solo
-Materials.Ice,Ice,冰,얼음,氷,Hielo,Gelo
-Materials.LeafyGrass,Leafy Grass,绿叶草,무성한 잔디,草地,Hierba espesa,Grama alta
-Materials.Limestone,Limestone,石灰石,석회암,ライムストーン,Piedra caliza,Calcário
-Materials.Mud,Mud,泥,진흙,泥,Lodo,Lama
-Materials.Pavement,Pavement,路面,보도,舗道,Pavimento,Pavimentação
-Materials.Rock,Rock,岩石,바위,岩,Roca,Rocha
-Materials.Salt,Salt,盐,소금,塩,Sal,Sal
-Materials.Sand,Sand,沙,모래,砂,Arena,Areia
-Materials.Sandstone,Sandstone,砂岩,사암,サンドストーン,Piedra arenisca,Arenito
-Materials.Slate,Slate,石板,슬레이트,スレート,Pizarra,Ardósia
-Materials.Snow,Snow,雪,눈,雪,Nieve,Neve
-Materials.Water,Water,水域,물,水,Agua,Água
-Materials.WoodPlanks,Wood Planks,木板,나무 판자,木材,Tablones de madera,Tábuas
+Key,en_US,zh_CN,ko_KR,ja_JP,es_ES,pt_BR,fr_FR,it_IT,zh_TW
+Plugin.Name,Part to Terrain,部件至地形,파트를 지형으로,地形のパーツ,Parte en Terreno,Parte para terreno,Partie du terrrain,Parte in terreno,零件到地形
+Plugin.NameDev,Part to Terrain [DEV],部件至地形 [DEV],파트를 지형으로 [DEV],地形のパーツ [DEV],Parte en Terreno [DEV],Parte para terreno [DEV],Partie du terrrain [DEV],Parte in terreno [DEV],零件到地形 [DEV]
+Plugin.Desc,Convert parts into terrain with ease.,,,,,,,,
+Plugin.NameVersion,Part to Terrain {1},部件至地形 {1},파트를 지형으로 {1},地形のパーツ {1},Parte en Terreno {1},Parte para terreno {1},Partie du terrrain {1},Parte in terreno {1},零件到地形 {1}
+Plugin.Search,Search,搜索,검색,サーチ,Buscar,Pesquisar,Rechercher,Cerca,搜尋
+Button.Materials,Materials,物料,기재,材料,Materiales,Materiais,Matériel,Materiale,材質
+Button.Settings,Settings,设置,설정,設定,Config,Config,Paramètres,Impostazioni,設定
+Settings.CheckUpdates,Check for updates,检查更新,,,,,,,
+Settings.CheckUpdatesDesc,Check for updates on Studio launch and display a notice when the plugin is outdated.,,,,,,,,
+Settings.DeletePart,Delete part when converted,,,,,,,,
+Settings.DeletePartDesc,Deletes the part after being converted to Terrain.,,,,,,,,
+Settings.EnabledSelectionBox,Highlight part on hover,,,,,,,,
+Settings.EnabledSelectionBoxDesc,Highlight the part when the mouse is hovers over the part.,,,,,,,,
+Settings.IgnoreLockedParts,Ignore locked parts,,,,,,,,
+Settings.IgnoreLockedPartsDesc,Parts with their Locked property set to true will not be converted.,,,,,,,,
+Settings.PreserveTerrain,Preserve existing Terrain,,,,,,,,
+Settings.PreserveTerrainDesc,Existing terrain will not be overwritten.<br/><br/>NOTE: Air will delete terrain regardless of setting.,,,,,,,,
+Settings.IgnoreInvisibleParts,Ignore Invisible Parts,,,,,,,,
+Settings.IgnoreInvisiblePartsDesc,Parts that are invisible will converted and will not be highlighted when hover,,,,,,,,
+Notice.Outdated,A new update is available.,,,,,,,,
+Notice.IgnoreLockedPart,Ignoring locked part due to settings.,,,,,,,,
+Notice.ShapeNotSupported,Part shape is not supported.,,,,,,,,
+Notice.ClassNotSupport,Part class is not supported.,,,,,,,,
+Notice.NoResultsFound,No results found,未找到结果,결과 없음,結果が見つかりませんでした,No se encontraron resultados,Nenhum resultado encontrado,Pas de résultats trouvés,Nessun risultato trovato,找不到結果
+Materials.Air,Air,天空,공기,空気,Aire,Ar,Air,Aria,空氣
+Materials.Asphalt,Asphalt,沥青,아스팔트,アスファルト,Asfalto,Asfalto,Asphalte,Asfalto,瀝青
+Materials.Basalt,Basalt,玄武岩,현무암,玄武岩,Basalto,Basalto,Basalte,Basalto,玄武岩
+Materials.Brick,Brick,砖块,벽돌,レンガ,Ladrillo,Ladrillo,Brique,Mattone,磚塊
+Materials.Cobblestone,Cobblestone,鹅卵石,자갈,玉砂利,Adoquín,Paralelepípedo,Pavé,Ciottolo,鵝卵石
+Materials.Concrete,Concrete,水泥,콘크리트,コンクリート,Concreto,Concreto,Béton,Calcestruzzo,混凝土
+Materials.CrackedLava,Cracked Lava,裂纹熔岩,갈라진 용암,ひび割れた溶岩,Lava agrietada,Lava rachada,Lave fissurée,Lava incrinata,裂紋熔岩
+Materials.Glacier,Glacier,冰川,빙하,氷河,Glaciar,Geleira,Glacier,Ghiacciaio,冰河
+Materials.Grass,Grass,草地,잔디,草,Hierba,Grama,Herbe,Erba,草
+Materials.Ground,Ground,土地,토양,地面,Tierra,Solo,Terre,Suolo,土地
+Materials.Ice,Ice,冰,얼음,氷,Hielo,Gelo,Glace,Ghiaccio,冰
+Materials.LeafyGrass,Leafy Grass,绿叶草,무성한 잔디,草地,Hierba espesa,Grama alta,Herbe feuillue,Erba rigogliosa,綠葉草
+Materials.Limestone,Limestone,石灰石,석회암,ライムストーン,Piedra caliza,Calcário,Calcaire,Calcare,石灰岩
+Materials.Mud,Mud,泥,진흙,泥,Lodo,Lama,Boue,Fango,泥
+Materials.Pavement,Pavement,路面,보도,舗道,Pavimento,Pavimentação,Pavés,Pavimentazione,人行道
+Materials.Rock,Rock,岩石,바위,岩,Roca,Rocha,Rocher,Pietra,岩石
+Materials.Salt,Salt,盐,소금,塩,Sal,Sal,Sel,Sale,鹽
+Materials.Sand,Sand,沙,모래,砂,Arena,Areia,Sable,Sabbia,沙
+Materials.Sandstone,Sandstone,砂岩,사암,サンドストーン,Piedra arenisca,Arenito,Grès,Arenaria,砂岩
+Materials.Slate,Slate,石板,슬레이트,スレート,Pizarra,Ardósia,Ardoise,Ardesia,板岩
+Materials.Snow,Snow,雪,눈,雪,Nieve,Neve,Neige,Neve,雪
+Materials.Water,Water,水域,물,水,Agua,Água,Eau,Acqua,水域
+Materials.WoodPlanks,Wood Planks,木板,나무 판자,木材,Tablones de madera,Tábuas,Planches de bois,Assi di legno,木板
