--- a/src/Util/Localization/LocalizationTable.csv
+++ b/src/Util/Localization/LocalizationTable.csv
@@ -15,7 +15,7 @@ Settings.PreserveTerrain,Preserve existing Terrain,,,,,,,,,,
 Settings.PreserveTerrainDesc,Existing terrain will not be overwritten.<br/><br/>NOTE: Air will delete terrain regardless of setting.,,,,,,,,,,
 Settings.IgnoreInvisibleParts,Ignore Invisible Parts,,,,,,,,,,
 Settings.IgnoreInvisiblePartsDesc,Parts that are invisible will converted and will not be highlighted when hover,,,,,,,,,,
-Notice.Outdated,A new update is available.,,,,,,,,,,
+Notice.Outdated,A new update is available!,,,,,,,,,,
 Notice.NoResultsFound,No results found,未找到结果,결과 없음,結果が見つかりませんでした,No se encontraron resultados,Nenhum resultado encontrado,Pas de résultats trouvés,Nessun risultato trovato,找不到結果,Keine Ergebnisse gefunden,Không tìm thấy kết quả
 Materials.Air,Air,天空,공기,空気,Aire,Ar,Air,Aria,空氣,Luft,Không Khí
 Materials.Asphalt,Asphalt,沥青,아스팔트,アスファルト,Asfalto,Asfalto,Asphalte,Asfalto,瀝青,Asphalt,Nhựa Đường
